--- a/Disappearing-Circles/circles.html
+++ b/Disappearing-Circles/circles.html
@@ -5,9 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div id="red-circle"></div>
-		<div id="blue-circle"></div>
-		<div id="green-circle"></div>
+		<div class="circle" id="red"></div>
+		<div class="circle" id="blue"></div>
+		<div class="circle" id="green"></div>
 	</body>
 	<script src="script.js"></script>
 </html>
